src/test/deca/context/valid/testFirstClass.deca
// Description:
//    first test of object part.
//
// Resultats:
//    TEST PASS
//
// Historique:
//    cree le 18/01/2023

class A{
   protected int x;
   int getX(){
      return x;
   }
   void setX(int x){
      this.x = x;
   }
}

{
   A a = new A();
   a.setX(1);
   println("a.getX() = ", a.getX());
}
